gcc/testsuite/g++.dg/modules/atom-decl-3.C

int i;
import baz;
// { dg-error "failed to read" "" { target *-*-* } 0 }
// { dg-prune-output "fatal error:" }
// { dg-prune-output "compilation terminated" }
